Reviews and reformats source code
In this commit the source code has been reviewed to make minor changes,
improvements and format review.

--- a/src/main/resources/conf/aibench.conf
+++ b/src/main/resources/conf/aibench.conf
@@ -26,8 +26,7 @@
 # With this options you will get a verbose output of what's happening in the plugin engine
 # Very useful to debug problems with the AIBench platform
 #
-
-pluginengine.debug = true
+pluginengine.debug = false
 
 #
 # Override the default splash image. A file to use as the initial splash. The file is relative to the AIBench's root directory
