--- a/src/main/resources/conf/core.conf
+++ b/src/main/resources/conf/core.conf
@@ -24,7 +24,7 @@
 #
 # Size of the Thread pool used to execute operations. By default, availableProcessors() * 2 is taken
 #
-threadpool.size=4
+# threadpool.size=4
 
 #
 # Listen to changes in user datatypes which implements java.util.Observable
