--- a/src/main/resources/conf/workbench.conf
+++ b/src/main/resources/conf/workbench.conf
@@ -24,7 +24,7 @@
 #
 # Main Window Title
 #
-mainwindow.title=ADOPS v0.5.0
+mainwindow.title=ADOPS v${project.version}
 
 #
 # Status Bar visibility
@@ -75,7 +75,6 @@ sessiontree.name=Session
 #
 clipboardtree.visible=true
 
-
 #
 # Clipboard Tree slot in the layouting system. Please see also /conf/template.xml
 #
@@ -89,13 +88,13 @@ clipboardtree.name=Clipboard
 #
 # Clipboard Tree organizes datatypes instances by their class
 #
-#clipboardtree.organizebyclass=false
+clipboardtree.organizebyclass=true
 
 #
 # Tree null treatment. In Explicit-datatypes and with Structure=COMPLEX, should subitems should be displayed or not in trees?.
 # Default is true
 #
-#trees.shownulls=false
+trees.shownulls=false
 
 #
 # Log Area visibility
