Updates the SING Maven repositories URL to HTTPS
The SING Maven repositories now use HTTPS protocol. This commit updates
the POM file to use the new URLs.

--- a/pom.xml
+++ b/pom.xml
@@ -110,12 +110,12 @@
 		<repository>
 			<id>sing-maven-releases</id>
 			<name>SING Maven Releases</name>
-			<url>http://maven.sing-group.org/repository/maven-releases/</url>
+			<url>https://maven.sing-group.org/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>sing-maven-releases</id>
 			<name>SING Maven Snapshots</name>
-			<url>http://maven.sing-group.org/repository/maven-snapshots/</url>
+			<url>https://maven.sing-group.org/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -123,7 +123,7 @@
 		<repository>
 			<id>sing-repository</id>
 			<name>SING repository</name>
-			<url>http://maven.sing-group.org/repository/maven-public/</url>
+			<url>https://maven.sing-group.org/repository/maven-public/</url>
 		</repository>
 		<repository>
 			<id>say.swing.footchooser</id>
