Improves error management and identification
The error management and identification has been improved by adding more file
checks and a new default error dialog.

--- a/src/main/resources/plugin.xml
+++ b/src/main/resources/plugin.xml
@@ -295,5 +295,7 @@
 				icon="icons/results.png"
 			/> 
 		</extension>
+		
+		<extension uid="aibench.workbench" name="aibench.workbench.error.notifier" class="es.uvigo.ei.sing.adops.views.error.ADOPSErrorNotifier" />
 	</extensions>
 </plugin>
